--- a/src/saar_website/templates/saar_website/about_review.html
+++ b/src/saar_website/templates/saar_website/about_review.html
@@ -313,34 +313,35 @@
                 </div>
                 
                 <div class="row g-4">
-                    <div class="col-lg-4 col-md-6">
+                    <div class="col-lg-3 col-md-6">
                         <div class="text-center p-4 bg-primary text-white rounded-3">
                             <div class="display-5 fw-bold mb-2">Top 10</div>
-                            <h6 class="fw-bold mb-2 text-warning">Classement CI</h6>
-                            <small class="opacity-75">Parmi les leaders du marché</small>
+                            <h6 class="fw-bold mb-2 text-white">Classement CI</h6>
+                            <small class="opacity-75">Parmi les leaders du marché</small> 
+                            {% comment %} <small class="opacity-75">8ième place sur le marché ivoirien</small> {% endcomment %}
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6">
+                    <div class="col-lg-3 col-md-6">
                         <div class="text-center p-4 bg-success text-white rounded-3">
                             <div class="display-5 fw-bold mb-2">150+</div>
-                            <h6 class="fw-bold mb-2">Collaborateurs</h6>
+                            <h6 class="fw-bold mb-2 text-white">Collaborateurs</h6>
                             <small class="opacity-75">Équipe dédiée</small>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="text-center p-4 bg-warning text-white rounded-3">
-                            <div class="display-5 fw-bold mb-2">4</div>
-                            <h6 class="fw-bold mb-2">Spécialisations</h6>
-                            <small class="opacity-75">Domaines d'expertise</small>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="text-center p-4 bg-primary text-white rounded-3">
+                            <div class="display-5 fw-bold mb-2">+46%</div>
+                            <h6 class="fw-bold mb-2 text-white">Croissance Chiffre d'affaires</h6>
+                            <small class="opacity-75">Croissance de 46% en 2024</small>
                         </div>
                     </div>
-                    {% comment %} <div class="col-lg-3 col-md-6">
+                    <div class="col-lg-3 col-md-6">
                         <div class="text-center p-4 bg-info text-white rounded-3">
-                            <div class="display-5 fw-bold mb-2">2022</div>
-                            <h6 class="fw-bold mb-2">Nouvelle Ère</h6>
-                            <small class="opacity-75">Sous nouvelle direction</small>
+                            <div class="display-5 fw-bold mb-2">+24</div>
+                            <h6 class="fw-bold text-white mb-2">Nouveaux Partenariats</h6>
+                            <small class="opacity-75">Partenariat diversifié</small>
                         </div>
-                    </div> {% endcomment %}
+                    </div> 
                 </div>
             </div>
         </div>
