Mise à jour Produits

--- a/src/saar_website/templates/saar_website/about_grp.html
+++ b/src/saar_website/templates/saar_website/about_grp.html
@@ -5,7 +5,7 @@
 {% block content %}
 
       <!-- Header Start -->
-      <div class="container-fluid bg-breadcrumb">
+      <div class="container-fluid bg-breadcrum">
         <div class="container text-center py-5" style="max-width: 900px;">
             <h3 class="text-white display-3 mb-4">Le Groupe SAAR</h1>
             <ol class="breadcrumb justify-content-center mb-0">
@@ -68,7 +68,7 @@
 
                
             </div>
-
+            
             {% comment %} <div class="col-8">
                 <h3 class="mb-2">Envoyer un message</h3>
                 <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
