--- a/src/saar_website/static/css/style.css
+++ b/src/saar_website/static/css/style.css
@@ -462,7 +462,9 @@ small, .small {
     justify-content: center;
     text-align: center;
     /* background: linear-gradient(rgba(0, 0, 0, .15), rgba(0, 0, 0, 0.15)); */
-    background: linear-gradient(rgba(19, 53, 123, 0.15), rgba(19, 53, 123, 0.15)), url(../img/accueil_1.png);
+    /* background: linear-gradient(rgba(19, 53, 123, 0.15), rgba(19, 53, 123, 0.15)), url(../img/accueil_1.png); */
+    background: linear-gradient(rgba(19, 53, 123, 0.15), rgba(19, 53, 123, 0.15)), url(../img/accueil_saarci_t.jpeg);
+
     background-size: cover;
     z-index: initial;
     font-family: var(--font-primary);
@@ -545,6 +547,15 @@ small, .small {
 
 /*** Single Page Hero Header Start ***/
 .bg-breadcrumb {
+    /* background: linear-gradient(rgba(19, 53, 123, 0.5), rgba(19, 53, 123, 0.5)), url(../img/assurance_auto.jpg); */
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    padding: 150px 0 50px 0;
+}
+
+.bg-breadcrum {
     background: linear-gradient(rgba(19, 53, 123, 0.5), rgba(19, 53, 123, 0.5)), url(../img/assurance_auto.jpg);
     background-position: center center;
     background-repeat: no-repeat;
