--- a/src/saar_website/templates/saar_website/about_review.html
+++ b/src/saar_website/templates/saar_website/about_review.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <!-- Header Start -->
-<div class="container-fluid bg-breadcrumb">
+<div class="container-fluid bg-breadcrum">
     <div class="container text-center py-5" style="max-width: 900px;">
         <h1 class="text-white display-3 mb-4 fw-bold">SAAR Assurances Côte d'Ivoire</h1>
         <p class="text-white-50 fs-5 mb-4">Filiale du Groupe SAAR • Top 10 des assureurs ivoiriens</p>
