--- a/src/saar_website/templates/saar_website/index.html
+++ b/src/saar_website/templates/saar_website/index.html
@@ -46,7 +46,7 @@
                                         </div>
                                         <div class="blog-content border border-top-0 rounded-bottom p-4 bg-light">
                                             <a href="{% url 'produit' numero=produit.pk %}" class="h4">{{produit.titre}}</a>
-                                            <p class="my-3" style="text-align: justify;">{{produit.contenu|truncatechars:200}}</p>
+                                            <p class="my-3" style="text-align: justify;">{{produit.contenu|safe|truncatechars:200}}</p>
                                             {% comment %} <a href="{% url 'produit' numero=produit.pk %}" class="btn btn-primary rounded-pill py-2 px-4">Lire plus</a> {% endcomment %}
                                             <a href="{% url 'produit_detail' slug=produit.slug %}" class="btn btn-primary rounded-pill py-2 px-4">Lire plus</a>
 
@@ -74,7 +74,7 @@
                                         </div>
                                         <div class="blog-content border border-top-0 rounded-bottom p-4 bg-light">
                                             <a href="{% url 'produit' numero=produit.pk %}" class="h4">{{produit.titre}}</a>
-                                            <p class="my-3" style="text-align: justify;">{{produit.contenu|truncatechars:200}}</p>
+                                            <p class="my-3" style="text-align: justify;">{{produit.contenu|safe|truncatechars:200}}</p>
                                             {% comment %} <a href="{% url 'produit' numero=produit.pk %}" class="btn btn-primary rounded-pill py-2 px-4">Lire plus</a> {% endcomment %}
                                             <a href="{% url 'produit_detail' slug=produit.slug %}" class="btn btn-primary rounded-pill py-2 px-4">Lire plus</a>                                        
                                         </div>
