--- a/src/saar_website/templates/saar_website/partials/header.html
+++ b/src/saar_website/templates/saar_website/partials/header.html
@@ -123,8 +123,8 @@
                          <a href="{% url 'contact' %}" class="nav-item nav-link text-center {% if active_contact %} active {% endif %}">Contacts</a>
 
                     </div>
-                    {% comment %} <a href="https://sinistres.saarassurancesci.com/" class="btn btn-primary rounded-pill py-2 px-4 ms-lg-4">Gérer votre sinistre</a> {% endcomment %}
-                    <a href="{% url 'test' %}" class="btn btn-primary rounded-pill py-2 px-4 ms-lg-4">Gérer votre sinistre</a>
+                    <a href="https://sinistres.saarassurancesci.com/" target="blank" class="btn btn-primary rounded-pill py-2 px-4 ms-lg-4">Gérer votre sinistre</a>
+                    {% comment %} <a href="{% url 'test' %}" class="btn btn-primary rounded-pill py-2 px-4 ms-lg-4">Gérer votre sinistre</a> {% endcomment %}
 
                 </div>
             </nav>
