--- a/src/saar_website/templates/saar_website/about_grp_review.html
+++ b/src/saar_website/templates/saar_website/about_grp_review.html
@@ -265,7 +265,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="bg-primary rounded-4 p-5 text-white text-center">
-                    <h3 class="display-6 fw-bold mb-3">Rejoignez l'Excellence SAAR</h3>
+                    <h3 class="display-6 fw-bold mb-3 text-white">Rejoignez l'Excellence SAAR</h3>
                     <p class="fs-5 mb-4 opacity-90">
                         Découvrez nos solutions d'assurance adaptées aux réalités africaines
                     </p>
