--- a/src/saar_website/templates/saar_website/partials/header.html
+++ b/src/saar_website/templates/saar_website/partials/header.html
@@ -33,8 +33,8 @@
                 <a href="{% url 'index' %}" class="navbar-brand p-0">
                 <h1 class="m-0"><img src="{% static 'img/LOGO2_Plan.png' %}"  alt="Logo"></h1>
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                    <span class="fa fa-bars"></span>
+                <button class="navbar-toggler" type="button" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
